<resources>
    <string name="app_name">Forecast</string>
    <string name="humidity">Humidity</string>
    <string name="windDirection">Wind direction</string>
    <string name="windSpeed">Wind speed</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
