<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="6"
    android:columnCount="2"
    tools:context=".MainActivity"
    android:paddingVertical="10dp">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="5"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnSpan="2"
        android:src="@drawable/sun" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/temperature"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:gravity="center_vertical|start"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_column="1"
        android:text="35"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:gravity="center_vertical|end"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/windSpeed"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:gravity="center_vertical|start"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_row="2"
        android:layout_column="1"
        android:text="3.61"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:gravity="center_vertical|end"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/windDirection"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:gravity="center_vertical|start"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_marginEnd="20dp"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:scaleType="fitEnd"
        android:src="@drawable/ic_arrow_upward_black_24dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/humidity"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:gravity="center_vertical|start"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_row="4"
        android:layout_column="1"
        android:text="80%"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:gravity="center_vertical|end"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_row="5"
        android:layout_column="0"
        android:text="@string/pressure"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:gravity="center_vertical|start"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_row="5"
        android:layout_column="1"
        android:text="760"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:gravity="center_vertical|end"/>

</GridLayout>