<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="7"
    android:columnCount="2"
    tools:context=".ui.activities.MainActivity"
    android:background="@color/background"
    android:id="@+id/weather_activity">

    <ImageView
        android:id="@+id/weather"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="5"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnSpan="2"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/temperature"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:gravity="center_vertical|center_horizontal"/>

    <TextView
        android:id="@+id/temp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_column="1"
        android:text="35"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:gravity="center_vertical|center_horizontal"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/windSpeed"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:gravity="center_vertical|center_horizontal"/>

    <TextView
        android:id="@+id/windSpeed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_row="2"
        android:layout_column="1"
        android:text="3.61"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:gravity="center_vertical|center_horizontal"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/windDirection"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:gravity="center_vertical|center_horizontal"/>

    <ImageView
        android:id="@+id/windDir"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:src="@drawable/arrow"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/humidity"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:gravity="center_vertical|center_horizontal"/>

    <TextView
        android:id="@+id/humidity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_row="4"
        android:layout_column="1"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:gravity="center_vertical|center_horizontal"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_row="5"
        android:layout_column="0"
        android:text="@string/pressure"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:gravity="center_vertical|center_horizontal"/>

    <TextView
        android:id="@+id/pressure"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_row="5"
        android:layout_column="1"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:gravity="center_vertical|center_horizontal"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/city"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:visibility="invisible"/>


</GridLayout>